--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,3 +13,4 @@ $color-block-violet: #665eff;
 $slider-pointer: #3ec1aa;
 $navbar-background-home: #38404e;
 $navbar-font-color: #05143e;
+$text-input: #f2f6fe;
