--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,10 +1,7 @@
 @import 'variables';
 @import 'typography';
 @import 'global';
-
-.hide-mobile {
-  display: none;
-}
+@import 'auth';
 
 .brand-logo {
   span {
@@ -30,6 +27,7 @@
   height: 100vh;
   color: $white;
   position: absolute;
+  z-index: 2;
 
   .side-header {
     display: flex;
@@ -55,18 +53,23 @@
 
 .dashboard {
   grid-area: content;
+
   .analytics {
-    margin-top: 20px;
+    margin-top: 25px;
 
     small {
       font-weight: bold;
     }
 
     table {
-      margin-top: 20px;
-      border-collapse: collapse;
+      margin-top: 10px;
+      overflow: hidden;
+      // border: 2px solid rgba($color: #c6dbf793, $alpha: 0.3);
       width: 100%;
-      box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.29);
+      border-radius: 0.8rem;
+      box-shadow: 0px 18px 32px #21318414;
+      border-collapse: collapse;
+
       td,
       th {
         border-bottom: 1px solid #ddd;
@@ -74,16 +77,17 @@
         padding-left: 25px;
       }
 
-      tr:hover {
-        background-color: #ddd;
+      tr:last-child {
+        td {
+          border-bottom: none;
+        }
       }
 
       th {
-        padding-top: 12px;
-        padding-bottom: 12px;
+        background-color: $color-block-violet;
+        color: white;
         text-align: left;
         font-weight: 600;
-        color: gray;
       }
     }
   }
@@ -123,10 +127,6 @@
       'side-nav content';
   }
 
-  .hide-desktop {
-    display: none;
-  }
-
   .side-nav {
     position: static;
   }
@@ -135,8 +135,8 @@
     .account-cards {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
-      margin-top: 60px;
+      justify-content: space-around;
+      margin-top: 80px;
       margin-bottom: 0;
     }
   }
