--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,9 +7,13 @@
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
+  // font-family: 'Rubik', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
+  height: 100vh;
+  background: transparent linear-gradient(121deg, #ffffff 0%, #f8f8fa 100%) 0%
+    0% no-repeat padding-box;
 }
 
 ul {
@@ -35,8 +41,20 @@ a {
   box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.29);
 }
 
+.hide-mobile {
+  display: none;
+}
+
 .light-color {
   color: gray;
+}
+
+.purple-text {
+  color: $dark-sky;
+}
+
+.strong {
+  font-weight: bold;
 }
 
 .btn-1 {
@@ -52,9 +70,50 @@ a {
   }
 }
 
-.dropdown {
-  position: relative;
+.btn-primary {
   display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  position: relative;
+  padding: 0.8em 4em 0.8em 2.2em;
+  // background: linear-gradient(to right, $neon-green, $lime-green);
+  height: 3em;
+  border: none;
+  border-radius: 63px;
+  color: white;
+  transition: 0.2s;
+
+  background: transparent
+    linear-gradient(94deg, $neon-green 0%, $lime-green 97%) 0% 0% no-repeat
+    padding-box;
+  box-shadow: 0px 4px 16px #415d6f29;
+  width: 15em;
+}
+
+.btn-primary-circle {
+  &:after {
+    content: '\f105';
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    background: white;
+    color: $lime-green;
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 6px 0px;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    right: 4px;
+    top: 3px;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 300;
+  }
+
+  &:hover:after {
+    -webkit-animation: none;
+    animation: none;
+  }
 }
 
 .dropdown-content {
@@ -63,12 +122,21 @@ a {
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
-  z-index: 1;
   cursor: pointer;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+@media only screen and (min-width: 1024px) {
+  .hide-tablet {
+    display: none;
+  }
+
+  .wrapper {
+    padding: 0px 60px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
