Register & User loading
-Completed registration and loading the user once logged in
-Created Private Route for specific routes
-Fixed navbar removal when in login/register page
-Added utility for setting the Token for axios requests

--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -40,7 +40,8 @@
     margin-bottom: 15px;
   }
 
-  input[type='text'] {
+  input[type='text'],
+  input[type='email'] {
     background-color: $text-input;
     border: none;
     outline: none;
