--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -41,7 +41,8 @@
   }
 
   input[type='text'],
-  input[type='email'] {
+  input[type='email'],
+  input[type='password'] {
     background-color: $text-input;
     border: none;
     outline: none;
@@ -53,6 +54,14 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .auth {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+  }
   .auth-flex {
     display: flex;
     flex-direction: column;
@@ -65,6 +74,7 @@
   .auth_img {
     display: block;
     max-width: 600px;
+    max-height: 600px;
   }
 }
 
@@ -85,7 +95,9 @@
       font-size: 0.9rem;
     }
 
-    input[type='text'] {
+    input[type='text'],
+    input[type='email'],
+    input[type='password'] {
       padding: 1rem 1.4rem;
       margin-bottom: 25px;
       font-size: 16px;
