Alerts & Api usage
-Created alerts component
-incorporated alerts in specific errors/success
-now initial page is login instead of register
-fixed hamburger design to show expand button

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -96,7 +96,7 @@
 
 .account {
   grid-area: content;
-  position: relative;
+  //position: relative;
 
   h2 {
     text-align: center;
@@ -156,6 +156,9 @@
       'side-nav content';
   }
 
+  .nav-header {
+    padding-top: 1.9em;
+  }
   .side-nav {
     position: static;
   }
