--- a/src/styles/_account.scss
+++ b/src/styles/_account.scss
@@ -18,7 +18,8 @@
     align-items: center;
     margin-bottom: 15px;
 
-    input[type='text'] {
+    input[type='text'],
+    input[type='password'] {
       width: 100%;
       margin-right: 10px;
       background-color: $text-input;
@@ -36,7 +37,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: calc(100vh - 75px);
+  //height: calc(100vh - 75px);
   width: 100%;
   background-color: rgba($color: #000000, $alpha: 0.6);
 }
