Basic mapbox features completed

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,7 +25,7 @@
   overflow: auto;
   width: 250px;
   padding: 0.7em 1.3em;
-  transition: all 1s;
+  transition: all 0.7s ease-out;
   height: 100%;
   min-height: 100vh;
   color: $white;
