--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -154,6 +154,11 @@
   }
 }
 
+// Hide Map Attribution
+.mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right {
+  display: none;
+}
+
 @media only screen and (min-width: 1024px) {
   .App {
     display: grid;
